@@ -1,5 +1,6 @@
 package ru.practicum.shareit.user;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -11,61 +12,62 @@ import ru.practicum.shareit.user.dto.UserMapper;
 import ru.practicum.shareit.user.model.User;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class UserService {
     private final UserRepository userRepository;
+    private final UserMapper userMapper;
 
+    @Transactional
     public UserDto create(UserDto userDto) {
-        if (userRepository.findByEmail(userDto.getEmail()).isPresent()) {
+        if (userRepository.existsByEmail(userDto.getEmail())) {
             throw new EmailAlreadyExistsException("Email already exists");
         }
-        User user = UserMapper.toUser(userDto);
+        User user = userMapper.toUser(userDto);
         log.info("Creating user: {}", user);
-        return UserMapper.toUserDto(userRepository.save(user));
+        return userMapper.toDto(userRepository.save(user));
     }
 
+    @Transactional
     public UserDto update(Long userId, UpdateUserDto userDto) {
         User existingUser = userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User is not found"));
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + userId));
 
         String newEmail = userDto.getEmail();
         if (newEmail != null && !newEmail.equals(existingUser.getEmail())) {
-            if (userRepository.findByEmail(newEmail).isPresent()) {
+            if (userRepository.existsByEmail(newEmail)) {
                 throw new EmailAlreadyExistsException("Email already exists");
             }
-            existingUser.setEmail(newEmail);
         }
 
-        if (userDto.getName() != null) {
-            existingUser.setName(userDto.getName());
-        }
-
-        return UserMapper.toUserDto(userRepository.update(existingUser));
+        userMapper.updateUser(userDto, existingUser);
+        log.info("Updating user with id: {}", userId);
+        return userMapper.toDto(userRepository.save(existingUser));
     }
 
-
+    @Transactional
     public UserDto getById(Long userId) {
-        log.info("Getting user: {}", userId);
-        return UserMapper.toUserDto(userRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User not found")));
+        log.info("Getting user by id: {}", userId);
+        return userMapper.toDto(userRepository.findById(userId)
+                .orElseThrow(() -> new ResourceNotFoundException("User not found with id: " + userId)));
     }
 
+    @Transactional
     public List<UserDto> getAll() {
         log.info("Getting all users");
         return userRepository.findAll().stream()
-                .map(UserMapper::toUserDto)
-                .collect(Collectors.toList());
+                .map(userMapper::toDto)
+                .toList();
     }
 
+    @Transactional
     public void delete(Long userId) {
-        if (!userRepository.existById(userId)) {
-            throw new ResourceNotFoundException("User not found");
+        if (!userRepository.existsById(userId)) {
+            throw new ResourceNotFoundException("User not found with id: " + userId);
         }
-        log.info("Deleting user: {}", userId);
+        log.info("Deleting user with id: {}", userId);
         userRepository.deleteById(userId);
     }
 }
